--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="offcanvas-header justify-content-end">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body text-center text-lg-start">
+                    <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link active" href="#">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Создание сайтов</a></li>
@@ -55,13 +55,6 @@
                         </ul>
                     </div>
                 </div>
-
-                <!-- <div class="d-none d-lg-block">
-                    <div class="d-flex flex-wrap align-items-center">
-                        <a class="fw-600 color-black color-red-hover d-none d-xxl-block"
-                            href="tel:+74951595901">+7 (495) 159-59-01</a>
-                    </div>
-                </div> -->
 
             </div>
         </nav>
@@ -284,9 +277,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center mt-4">
+                <div class="row justify-content-center mt-5">
                     <div class="col text-center">
-                        <a class="fw-bold" href="#">Посмотреть более 2200 шаблонов</a>
+                        <a class="fz-12 fw-bold" href="#">Посмотреть более 2200 шаблонов</a>
                     </div>
                 </div>
             </div>
@@ -301,13 +294,66 @@
                         <h2 class="h1">Цены на создание <span class="color-blue">сайтов под ключ</span></h2>
                     </div>
                 </div>
-                <div class="row g-4">
+                <div class="row g-4 mt-3">
                     <div class="col-lg-4">
                         <div class="card card-pricing h-100">
-                            <div class="card-body">
-                                <p>Тариф «Минимальный»</p>
-                                <p>CMS: Wordpress, OpenCart или ModX</p>
-                                <p>22 950 ₽</p>
+                            <div class="card-body pb-0">
+                                <div class="text-center">
+                                    <p class="fz-2 fw-bold">Тариф<br> «Минимальный»</p>
+                                    <p class="fw-light small">CMS: Wordpress</p>
+                                    <p class="fz-2 fw-bold py-4">5 950 ₽</p>
+                                </div>
+                                <ul>
+                                    <li>Домен (.ru/.рф)</li>
+                                    <li>Хостинг на 3 месяца</li>
+                                    <li>Готовый дизайн</li>
+                                    <li>CMS система управления сайтом</li>
+                                    <li>Неограниченое количество страниц</li>
+                                </ul>
+                            </div>
+                            <div class="card-footer text-center py-4">
+                                <p class="fw-bold color-deep-blue">Срок от 2 дней</p>
+                                <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
+                                <a class="btn btn-secondary mt-3" href="#">Выбрать</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card card-pricing h-100">
+                            <div class="card-body pb-0">
+                                <div class="text-center">
+                                    <p class="fz-2 fw-bold">Тариф<br> «Средний»</p>
+                                    <p class="fw-light small">CMS: Wordpress, OpenCart или ModX</p>
+                                    <p class="fz-2 fw-bold py-4">10 950 ₽</p>
+                                </div>
+                                <ul>
+                                    <li>Домен (.ru/.рф)</li>
+                                    <li>Хостинг на 3 месяца</li>
+                                    <li>Готовый дизайн</li>
+                                    <li>CMS система управления сайтом</li>
+                                    <li>Неограниченое количество страниц</li>
+                                    <li>Наполнение до 25 страниц</li>
+                                    <li>Каталог товаров или услуг</li>
+                                    <li>Наполнение каталого до 25 позиций</li>
+                                    <li>Стандартная карточка товара</li>
+                                    <li>Регистрация и кабинет покупателя</li>
+                                </ul>
+                            </div>
+                            <div class="card-footer text-center py-4">
+                                <p class="fw-bold color-deep-blue">Срок от 5 дней</p>
+                                <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
+                                <a class="btn btn-secondary mt-3" href="#">Выбрать</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card card-pricing h-100">
+                            <div class="card-body pb-0">
+                                <div class="text-center">
+                                    <p class="fz-2 fw-bold">Тариф<br> «Максимальный»</p>
+                                    <p class="fw-light small">CMS: Wordpress, OpenCart или ModX</p>
+                                    <p class="fz-2 fw-bold py-4">22 950 ₽</p>
+                                </div>
                                 <ul>
                                     <li>Домен (.ru/.рф)</li>
                                     <li>Хостинг на 3 месяца</li>
@@ -325,15 +371,14 @@
                                     <li>SEO-панель для продвижения</li>
                                     <li>Регистрация в поисковых системах</li>
                                 </ul>
-                                <p>Срок от 5 дней</p>
-                                <p>*В случае задержки предоставления материалов от Заказчика, срок разработки
-                                    увеличивается.</p>
-                                <a class="btn btn-secondary" href="#">Выбрать</a>
+                            </div>
+                            <div class="card-footer text-center py-4">
+                                <p class="fw-bold color-deep-blue">Срок от 10 дней</p>
+                                <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
+                                <a class="btn btn-secondary mt-3" href="#">Выбрать</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
                 </div>
             </div>
         </section>
@@ -374,7 +419,7 @@
         <!-- Заказать сайт в веб-студии недорого -->
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="cta p-5 rounded">
+                <div class="cta p-5 px-4 px-lg-5 rounded">
                     <div class="row g-4 align-items-center">
                         <div class="col-lg-8">
                             <h2 class="h1">Заказать сайт<br> в веб-студии <span class="color-blue">недорого</span></h2>
@@ -546,8 +591,10 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Закажи сайт для своего бизнеса</p>
-                    <p>Наши менеджеры свяжутся с Вами в ближайшее время</p>
+                    <div class="text-center">
+                        <p class="fz-17 fw-light">Закажи сайт для своего бизнеса</p>
+                        <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
+                    </div>
                     <form class="needs-validation" novalidate>
                         <div class="mb-4">
                             <label for="fname" class="form-label">Имя</label>
@@ -569,7 +616,7 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
-                            <label class="form-check-label" for="ex-check-2">Я согласен(а) с <a href="#privacyPolicy"
+                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="#privacyPolicy"
                                     data-bs-toggle="modal" data-bs-target="#privacyPolicy">политикой обработки
                                     персональных данных</a></label>
                         </div>
@@ -597,8 +644,12 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Спасибо! Ваши данные успешно отправлены</p>
-                    <p>Наши менеджеры свяжутся с Вами в ближайшее время</p>
+                    <div class="d-flex align-items-center" style="min-height: 520px;">
+                        <div class="text-center">
+                            <p class="fz-17 fw-light">Спасибо!<br> Ваши данные успешно отправлены</p>
+                            <p class="color-blue">Наши менеджеры свяжутся с Вами в ближайшее время</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
