line-height in price card

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     <p class="fw-light small">CMS: Wordpress</p>
                                     <p class="fz-2 fw-bold py-4">5 950 ₽</p>
                                 </div>
-                                <ul>
+                                <ul class="lh-4">
                                     <li>Домен (.ru/.рф)</li>
                                     <li>Хостинг на 3 месяца</li>
                                     <li>Готовый дизайн</li>
@@ -326,7 +326,7 @@
                                     <p class="fw-light small">CMS: Wordpress, OpenCart или ModX</p>
                                     <p class="fz-2 fw-bold py-4">10 950 ₽</p>
                                 </div>
-                                <ul>
+                                <ul class="lh-4">
                                     <li>Домен (.ru/.рф)</li>
                                     <li>Хостинг на 3 месяца</li>
                                     <li>Готовый дизайн</li>
@@ -354,7 +354,7 @@
                                     <p class="fw-light small">CMS: Wordpress, OpenCart или ModX</p>
                                     <p class="fz-2 fw-bold py-4">22 950 ₽</p>
                                 </div>
-                                <ul>
+                                <ul class="lh-4">
                                     <li>Домен (.ru/.рф)</li>
                                     <li>Хостинг на 3 месяца</li>
                                     <li>Готовый дизайн</li>
