--- a/index.html
+++ b/index.html
@@ -121,121 +121,112 @@
                                 earning rewards and saving money. But with hundreds of credit cards on the market.</p>
                         </div>
                         <div class="d-none d-lg-block">
-                            <a class="btn btn-secondary mt-5" href="#">Узнать</a>
+                            <a class="btn btn-secondary mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Узнать</a>
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1">
-                        <div class="mt-0 mt-lg-0">
-                            <div class="swiper priceSwiper overflow-hidden w-100 pe-3 pe-md-4"
-                                style="max-height: 405px;">
-                                <div class="swiper-wrapper pe-md-2">
-                                    <div class="swiper-slide h-auto">
+                        <div class="scroll-box pe-3 pe-lg-4">
+                            <div class="row g-3 g-md-4 row-cols-1">
 
-                                        <div class="row g-3 g-md-4 row-cols-1">
-
-                                            <!-- Article -->
-                                            <div class="col">
-                                                <article class="card card-hover-dark h-100 border-0">
-                                                    <div class="card-body">
-                                                        <p class="h3">
-                                                            <a href="#" class="stretched-link">Сайт-визитка от 35
-                                                                900₽</a>
-                                                        </p>
-                                                        <div class="fw-light">
-                                                            <p>The best credit cards offer some tantalizing combinations
-                                                                of
-                                                                promotions and prizes</p>
-                                                        </div>
-                                                    </div>
-                                                </article>
-                                            </div>
-
-                                            <!-- Article -->
-                                            <div class="col">
-                                                <article class="card card-hover-dark h-100 border-0">
-                                                    <div class="card-body">
-                                                        <p class="h3">
-                                                            <a href="#" class="stretched-link">Корпоративный от 75
-                                                                900₽</a>
-                                                        </p>
-                                                        <div class="fw-light">
-                                                            <p>We take proactive steps make sure your information and
-                                                                transactions are secure.</p>
-                                                        </div>
-                                                    </div>
-                                                </article>
-                                            </div>
-
-                                            <!-- Article -->
-                                            <div class="col">
-                                                <article class="card card-hover-dark h-100 border-0">
-                                                    <div class="card-body">
-                                                        <p class="h3">
-                                                            <a href="#" class="stretched-link">Интернет-магазин от 120
-                                                                000₽</a>
-                                                        </p>
-                                                        <div class="fw-light">
-                                                            <p>The best credit cards offer some tantalizing combinations
-                                                                of
-                                                                promotions and prizes</p>
-                                                        </div>
-                                                    </div>
-                                                </article>
-                                            </div>
-
-                                            <!-- Article -->
-                                            <div class="col">
-                                                <article class="card card-hover-dark h-100 border-0">
-                                                    <div class="card-body">
-                                                        <p class="h3">
-                                                            <a href="#" class="stretched-link">Сайт-визитка от 35
-                                                                900₽</a>
-                                                        </p>
-                                                        <div class="fw-light">
-                                                            <p>The best credit cards offer some tantalizing combinations
-                                                                of
-                                                                promotions and prizes</p>
-                                                        </div>
-                                                    </div>
-                                                </article>
-                                            </div>
-
-                                            <!-- Article -->
-                                            <div class="col">
-                                                <article class="card card-hover-dark h-100 border-0">
-                                                    <div class="card-body">
-                                                        <p class="h3">
-                                                            <a href="#" class="stretched-link">Корпоративный от 75
-                                                                900₽</a>
-                                                        </p>
-                                                        <div class="fw-light">
-                                                            <p>We take proactive steps make sure your information and
-                                                                transactions are secure.</p>
-                                                        </div>
-                                                    </div>
-                                                </article>
-                                            </div>
-
-                                            <!-- Article -->
-                                            <div class="col">
-                                                <article class="card card-hover-dark h-100 border-0">
-                                                    <div class="card-body">
-                                                        <p class="h3">
-                                                            <a href="#" class="stretched-link">Интернет-магазин от 120
-                                                                000₽</a>
-                                                        </p>
-                                                        <div class="fw-light">
-                                                            <p>The best credit cards offer some tantalizing combinations
-                                                                of
-                                                                promotions and prizes</p>
-                                                        </div>
-                                                    </div>
-                                                </article>
+                                <!-- Article -->
+                                <div class="col">
+                                    <article class="card card-hover-dark h-100 border-0">
+                                        <div class="card-body">
+                                            <p class="h3">
+                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
+                                                    900₽</a>
+                                            </p>
+                                            <div class="fw-light">
+                                                <p>The best credit cards offer some tantalizing combinations
+                                                    of
+                                                    promotions and prizes</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </article>
                                 </div>
-                                <div class="swiper-scrollbar"></div>
+
+                                <!-- Article -->
+                                <div class="col">
+                                    <article class="card card-hover-dark h-100 border-0">
+                                        <div class="card-body">
+                                            <p class="h3">
+                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Корпоративный</span> от 75
+                                                    900₽</a>
+                                            </p>
+                                            <div class="fw-light">
+                                                <p>We take proactive steps make sure your information and
+                                                    transactions are secure.</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
+
+                                <!-- Article -->
+                                <div class="col">
+                                    <article class="card card-hover-dark h-100 border-0">
+                                        <div class="card-body">
+                                            <p class="h3">
+                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
+                                                    000₽</a>
+                                            </p>
+                                            <div class="fw-light">
+                                                <p>The best credit cards offer some tantalizing combinations
+                                                    of
+                                                    promotions and prizes</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
+
+                                <!-- Article -->
+                                <div class="col">
+                                    <article class="card card-hover-dark h-100 border-0">
+                                        <div class="card-body">
+                                            <p class="h3">
+                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
+                                                    900₽</a>
+                                            </p>
+                                            <div class="fw-light">
+                                                <p>The best credit cards offer some tantalizing combinations
+                                                    of
+                                                    promotions and prizes</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
+
+                                <!-- Article -->
+                                <div class="col">
+                                    <article class="card card-hover-dark h-100 border-0">
+                                        <div class="card-body">
+                                            <p class="h3">
+                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Корпоративный</span> от 75
+                                                    900₽</a>
+                                            </p>
+                                            <div class="fw-light">
+                                                <p>We take proactive steps make sure your information and
+                                                    transactions are secure.</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
+
+                                <!-- Article -->
+                                <div class="col">
+                                    <article class="card card-hover-dark h-100 border-0">
+                                        <div class="card-body">
+                                            <p class="h3">
+                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
+                                                    000₽</a>
+                                            </p>
+                                            <div class="fw-light">
+                                                <p>The best credit cards offer some tantalizing combinations
+                                                    of
+                                                    promotions and prizes</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -314,7 +305,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 2 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary mt-3" href="#">Выбрать</a>
+                                <a class="btn btn-secondary mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -342,7 +333,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 5 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary mt-3" href="#">Выбрать</a>
+                                <a class="btn btn-secondary mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
@@ -375,7 +366,7 @@
                             <div class="card-footer text-center py-4">
                                 <p class="fw-bold color-deep-blue">Срок от 10 дней</p>
                                 <p class="fw-light small text-muted">*В случае задержки предоставления материалов от Заказчика, срок разработки увеличивается.</p>
-                                <a class="btn btn-secondary mt-3" href="#">Выбрать</a>
+                                <a class="btn btn-secondary mt-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Выбрать</a>
                             </div>
                         </div>
                     </div>
