--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main class="main">
 
         <!-- HERO -->
-        <section class="section section-hero">
+        <section class="section frontpage-hero">
             <div class="container">
                 <div class="row g-0">
                     <div class="col-lg-10">
@@ -607,8 +607,7 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
-                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="#privacyPolicy"
-                                    data-bs-toggle="modal" data-bs-target="#privacyPolicy">политикой обработки
+                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="#policy" target="_blank">политикой обработки
                                     персональных данных</a></label>
                         </div>
                         <div class="text-center mt-2 mt-md-3 mt-lg-4">
@@ -646,53 +645,10 @@
         </div>
     </div>
 
-    <!-- Modal Politicy -->
-    <div class="modal fade" id="privacyPolicy" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p class="fs-2">Политика конфиденциальности</p>
-                    <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
-                        персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
-                        Под
-                        персональными данными понимается любая информация, относящаяся к прямо или косвенно
-                        определённому или определяемому физическому лицу (гражданину).</p>
-                    <p>2. Пользователь также даёт своё согласие Администрации на отправку маркетинговых и информационных
-                        рассылок.</p>
-                    <p>3. Основанием для обработки персональных данных являются: статья 24 Конституции РФ и статья 6
-                        Федерального закона № 152-ФЗ «О персональных данных» с дополнениями и изменениями.</p>
-                    <p>4. В ходе обработки с персональными данными будут совершены следующие операции: сбор, хранение,
-                        уточнение, передача, блокирование, удаление, уничтожение — все упомянутые действия только в
-                        целях, указанных в п. 2 настоящего Соглашения.</p>
-                    <p>5. Администрация обязуется не передавать полученную от Пользователя информацию третьим лицам. Не
-                        считается нарушением предоставление персональных данных третьим лицам, действующим на основании
-                        договора с Сайтом, для исполнения обязательств перед Пользователем и только в рамках настоящего
-                        Соглашения.</p>
-                    <p>6. Персональные данные хранятся и обрабатываются до завершения всех необходимых процедур либо до
-                        ликвидации Сайта.</p>
-                    <p>7. Согласие может быть отозвано Пользователем или его представителем путём направления
-                        письменного заявления на Сайт по электронному адресу support@startsite.studio</p>
-                    <p>8. Пользователь принимает политику использования файлов cookies, используемую на Сайте, и даёт
-                        согласие на получение информации об IP-адресе и иных сведений о его активности на Сайте. Данная
-                        информация не используется для установления личности Пользователя.</p>
-                    <p>9. Администрация при обработке персональных данных принимает необходимые и достаточные
-                        организационные и технические меры для защиты персональных данных от неправомерного доступа к
-                        ним, а также от иных неправомерных действий в отношении персональных данных.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Cookie alert box -->
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100"
         role="alert">
-        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#privacyPolicy" data-bs-toggle="modal"
-                data-bs-target="#privacyPolicy">Подробнее</a> <button type="button"
+        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#policy" target="_blank">Подробнее</a> <button type="button"
                 class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
         </p>
